# trousers-0.3.11.2

./: .gitattributes  .gitignore  .travis.yml  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
.github/workflows/: codeql.yml  trousers-0.3.11.2.yml
m4/: glib-gettext.m4
man/: Makefile.in
man/man3/: .gitattributes  Makefile.in
man/man5/: Makefile.in
man/man8/: Makefile.in
src/: Makefile.in
src/include/: .gitattributes  Makefile.in  capabilities.h  spi_utils.h  tcsd.h  tcsps.h  threads.h  trousers_types.h
src/include/tss/: tcpa_defines.h  tcpa_error.h  tcpa_struct.h  tcpa_typedef.h  tcs.h  tddlapi_error.h  tspi.h
src/tcs/: Makefile.am  Makefile.in  tcs_evlog_imaem.c
src/tcs/ps/: ps_utils.c
src/tcsd/: Makefile.am  Makefile.in  platform.c
src/tddl/: Makefile.am  Makefile.in
src/trspi/: Makefile.am  Makefile.in  trousers.c
src/tspi/: Makefile.am  Makefile.in  obj_migdata.c  obj_pcrs.c  obj_rsakey.c
src/tspi/gtk/: callbacks.h  interface.h  main.c  support.h
src/tspi/rpc/tcstp/: rpc_counter.c
